# sempipes

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  NOTICE  README.md  demo.ipynb  demo__greedy_optimise_semantic_operator.ipynb  demo__optimise_sem_choose.ipynb  demo__optimise_semantic_operator.ipynb  demo__sem_agg_features.ipynb  demo__sem_agg_join_features.ipynb  demo__sem_fillna.ipynb  demo__sem_select.ipynb  demo_sem_augment.ipynb  demo_sem_extract_features.ipynb  demo_view_trajectory.ipynb  exp_minibench.sh  llm_fillna_demo.ipynb  mypy.ini  notes.md  optimiser_demo.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  selector_demo.ipynb
comparisons/aide_failures_dataintegration/: a.csv  sempipes_impl.py
comparisons/aide_failures_fairness/: aide.py  bias.py
comparisons/aide_failures_singlecelldata/: data.txt
comparisons/cell_typing/: PCA.py  README.md  aide.py  scVI.py  scVI_bc.py
comparisons/house_prices_advanced_regression_techniques/: README.md  _sempipes_impl.py  _sempipes_impl2.py  _sempipes_impl3.py  _sempipes_optimise.py  _sempipes_optimise2.py  _sempipes_optimise3.py  _sempipes_state.json  _sempipes_state2.json  aide.py  copilot_refined.py  copilot_skeleton.py  kaggle.py  kaggle2.py  kaggle3.py  kaggle_gyyre.py  kaggle_sempipes-optimised.py  kaggle_sempipes-optimised2.py  kaggle_sempipes.py  kaggle_sempipes2.py  kaggle_sempipes3.py  kaggle_sempipes_optimised3.py  kaggle_skrub.py  validation.csv
comparisons/scrabble-player-rating/: README.md  aide.py  dev.ipynb  kaggle.py  kaggle_gyyre.py  kaggle_skrub.py  rating-scrabble-players-with-xgb-regression.ipynb
comparisons/scrabble_player_rating/: README.md  _sempipes_impl.py  _sempipes_optimise.py  _sempipes_state.json  aide.py  copilot_refined.py  copilot_skeleton.py  kaggle.py  kaggle_gyyre.py  kaggle_sempipes-optimised.py  kaggle_sempipes.py  kaggle_skrub.py  validation.csv
comparisons/single_cell_analysis/: PCA_bc.py  README.md  aide_bc_corrected.py  aide_qr.py  aide_qr_corrected.py  scVI_bc.py
comparisons/tmdb-box-office-prediction/: README.md  aide.py  kaggle.py  kaggle_gyyre.py  kaggle_skrub.py
comparisons/tmdb_box_office_prediction/: README.md  _gyyre_impl.py  _gyyre_optimise.py  _sempipes_impl.py  _sempipes_impl3.py  _sempipes_impl_with_sem_extract_features.py  _sempipes_optimise.py  _sempipes_optimise2.py  _sempipes_optimise3.py  _sempipes_state2.json  aide.py  copilot_refined.py  copilot_skeleton.py  kaggle.py  kaggle2.py  kaggle2_sempipes.py  kaggle3.py  kaggle_gyyre.py  kaggle_gyyre_optimised.py  kaggle_sempipes.py  kaggle_sempipes2.py  kaggle_sempipes3.py  kaggle_sempipes_optimised.py  kaggle_sempipes_optimised2.py  kaggle_sempipes_optimised3.py  kaggle_skrub.py
experiments/aide_failures_SIGMOD/: README.md
experiments/aide_failures_dataintegration/: README.md  aide_prompt.txt  b.csv  sempipes_impl.py
experiments/aide_failures_fairness/: README.md  aide.py  bias.py  repayments.csv
experiments/aide_failures_singlecelldata/: aide_prompt.txt
experiments/caafe/: README.md  __init__.py  caafe.py  sempipes.py  sempipes_tabpfn.py
experiments/colopro/: __init__.py  _boxoffice.py  _churn.py  _fraudbaskets.py  _insurance.py  _midwest.py  _traffic.py  _tweets.py  churn_customers.csv  minibench.py  minibench_baseline.py  results.txt  test_pipeline.py
experiments/feature_extraction/: download_data_chestxray.py  download_data_contracts.py  download_data_esc50.py  download_data_eurosat.py
experiments/hibug/: README.md  _sempipes_optimize.py  hibug.py  hibug_attributes.csv  scoring.py  sempipes.py  sempipes_attributes.csv  sempipes_optimized.py  sempipes_optimized_attributes.csv  sempipes_state.json
experiments/house_prices_advanced_regression_techniques/: README.md  _aide_sempipes_optimize.py  _minisweagent_sempipes_optimize.py  _sempipes_impl.py  _sempipes_impl2.py  _sempipes_impl3.py  _sempipes_optimise.py  _sempipes_optimise2.py  _sempipes_optimise3.py  _sempipes_state3.json  aide.py  aide_cv.py  aide_sempipes.py  aide_sempipes_cv.py  aide_sempipes_optimised_cv.py  colopro_20260102_064629_09325b55.json  colopro_20260103_082657_6ff65fb9.json  copilot_refined.py  copilot_skeleton.py  data.csv  kaggle.py  kaggle2.py  kaggle2_cv.py  kaggle3.py  kaggle_cv.py  kaggle_sempipes.py  kaggle_sempipes2.py  kaggle_sempipes2_cv.py  kaggle_sempipes3.py  kaggle_sempipes_cv.py  kaggle_sempipes_optimised.py  kaggle_sempipes_optimised2.py  kaggle_sempipes_optimised2_cv.py  kaggle_sempipes_optimised3.py  kaggle_sempipes_optimised_cv.py  kaggle_skrub.py  minisweagent.py  minisweagent_cv.py  minisweagent_sempipes.py  minisweagent_sempipes_cv.py  (+2 more)
experiments/micromodels/: README.md  __init__.py  _sempipes_optimise.py  _sempipes_state.json  aide.md  debug.py  empathy.csv  log.txt  minisweagent.py  minisweagent_sempipes.py  reimplemented.py  sempipes.py  sempipes_optimised.py
experiments/missing_values/: numerical_baselines.py  summarize_results.py  text_llmpr.py  text_sempipes.py
experiments/scrabble_player_rating/: README.md  __init__.py  _aide_sempipes_optimize.py  _minisweagent_sempipes_optimize.py  _sempipes_impl.py  _sempipes_impl2.py  _sempipes_optimise.py  _sempipes_optimise2.py  _sempipes_state.json  _sempipes_state2.json  aide.py  aide_sempipes.py  (+17 more)
experiments/sigmod/rutgers/: execute.py  execute_sempipes.py  execute_sempipes_optimized.py  pyproject.toml
gyyre/: __init__.py  _operators.py  config.py
notes/: discussions.md  related.md
sempipes/: __init__.py  _choose.py  _features.py  _fill_na.py  _operators.py  config.py  logging.py
tests/: test_adversarial_prompts.py  test_adverserial_prompts.py  test_config_change.py  test_deduplication_estimator.py  test_demo_notebooks.py  test_sem_augment.py  test_sem_augment_optimizable.py  test_sem_clean.py  test_sem_clean_optimizable.py  test_sem_deduplicate.py  test_sem_distill.py  test_sem_extract_features.py  test_sem_extract_features_image.py  test_sem_extract_features_optimizable.py  test_sem_extract_features_text.py  test_sem_fillna.py  test_sem_refine.py  test_sem_refine_optimizable.py  test_trajectory_loading.py
(+227 files in other folders)
