[tool.poetry]
name = "sempipes"
version = "0.0.1"
description = ""
authors = [
    "Sebastian Schelter <schelter@tu-berlin.de>",
    "Olga Ovcharenko <ovcharenko@tu-berlin.de>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
skrub = "^0.6.2"
plotly = "^6.3.0"
graphviz = "^0.21"
litellm = "^1.76.1"
networkx = {version = "^3.5", python = ">=3.11,<3.13"}
python-dotenv = "^1.1.1"
tqdm = "^4.67.1"
torch = {version = "^2.8.0", source = "pypi"}
transformers = "^4.57.1"
dataclasses-json = "^0.6.7"
scipy = "^1.13.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "^0.7.2"
pre-commit = "^4.0.1"
pylint = "^3.3.8"
pytest = "^8.3.3"
jupyter = "^1.1.1"
lightgbm = "^4.6.0"
xgboost = { version = "^3.0.5", python = ">=3.10,<3.13" }
catboost = "^1.2.8"
kagglehub = "^0.3.13"
pydot = "^4.0.1"
tabicl = "^0.1.3"
h5py = "^3.14.0"
fastai = "^2.8.4"
radon = "^6.0.1"
scanpy = "^1.11.4"
harmonypy = "^0.0.10"
scib = "^1.1.7"
scib-metrics = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = [
    "experiments/tmdb_box_office_prediction/kaggle3.py",
]

[tool.ruff.lint]
# Select a minimal set of rules
select = [
    "F",
    "E",
    "I",
]

ignore = [
    "E501",  # Line too long
    "F401"   # Unused import, cannot configure this for `import sempipes` only
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/{docs}/*" = ["ALL"]
"**__init__.py" = ["ALL"]
"comparisons/single_cell_analysis/aide_qr.py" = ["ALL"]