[tool.poetry]
name = "sempipes-place5"
version = "0.0.1"
description = "Poetry environment for place5 with sempipes integration"
authors = [
    "Olga Ovcharenko <ovcharenko@tu-berlin.de>"
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Local sempipes library (editable install; repo root)
# Path from experiments/sigmod/place5/ to repo root: ../../../
sempipes = { path = "../../../", develop = true }

# Dependencies from requirements.txt
tqdm = "^4.67.1"
pandas = "^2.1.4"
regex = "^2022.4.24"
unidecode = "^1.3.8"

# Core sempipes dependencies (needed to run sempipes)
skrub = "^0.6.2"
plotly = "^6.3.0"
graphviz = "^0.21"
litellm = "^1.76.1"
networkx = "^3.5"
python-dotenv = "^1.1.1"
torch = {version = "^2.8.0", source = "pypi"}
transformers = "^4.57.1"
dataclasses-json = "^0.6.7"
scipy = "^1.16.3"
logging = "^0.4.9.6"
sdv = "^1.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

